# oidc-provider

./: .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
app/: auth.py  cli.py  config.py  database.py  main.py  models.py  schemas.py
app/api/: dependencies.py
app/api/v1/endpoints/oidc/: authorization.py  discovery.py  jwks.py  token.py  userinfo.py
app/api/web/templates/: login.html
app/application/services/: authorization_service.py  client_service.py  token_service.py  user_service.py  userinfo_service.py
app/domain/services/: authorization_rules.py  claims.py  scope_rules.py
app/endpoints/: authorization.py  discovery.py  jwks.py  token.py  userinfo.py
app/infrastructure/auth/: jwt.py  password.py
app/infrastructure/database/: models.py
app/oidc/: claims.py
app/services/: client_service.py  user_service.py
app/templates/: login.html
e2e/: test_oidc_blackbox.py
scripts/: docker_e2e_test.py  init_db.py
specs/1-oidc-auth-code/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/1-oidc-auth-code/checklists/: requirements.md
specs/1-oidc-auth-code/contracts/: endpoints.md
specs/2-docker-deployment/: plan.md  spec.md  tasks.md
specs/2-docker-deployment/checklists/: requirements.md
tests/: test_authorization_rules.py  test_authorization_service.py  test_claims.py  test_client_service.py  test_discovery.py  test_oidc_flow.py  test_token_service.py  test_userinfo.py
